# EDAMI

./: .gitignore  CMakeLists.txt  DatasetReader.h  NBC.cpp  NBC.h  README.md  edami.cfg.example  fertility_Diagnosis.txt  main.cpp
algorithm/: DataReader.cpp  DataReader.h  NBC.cpp  NBC.h  neighbourhood.cpp  neighbourhood.h
algorithm/models/: Cluster.cpp  Cluster.h  Dataset.cpp  Dataset.h  Point.cpp  Point.h
algorithm/utils/: config.cpp  config.h  error.h  simpleini.h
data/: arabicref.txt  fer.txt  fertility_Diagnosis.txt  fertility_Diagnosis_quick.txt  nbc.txt  noise_ref.txt  pb.txt  refPoint.txt  refPointDiagnosis.txt  refPointSponge.txt  refRn.txt  refWater.data  relation.txt  seedsref.txt  simple.txt  someParams.txt  variance.txt
models/: Dataset.cpp  Dataset.h  Point.cpp  Point.h
utils/: DatasetReader.cpp  DatasetReader.h  config.cpp  config.h  error.cpp  normalize.cpp  simpleini.h  variance.cpp
